adding required dependency in yml file

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,6 +30,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install fastapi
         pip install pytest
+        pip install uvicorn
+        pip install httpx
 
     - name: Run tests
       run: |
