--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,12 +7,12 @@ on:
     branches: [ main ]
 
 jobs:
-  # dockerbuild:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v4
-  #   - name: Build The Docker Image
-  #     run: docker build . --file DockerFile --tag workflow-test:$(date +%s)
+  dockerbuild:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Build The Docker Image
+      run: docker build . --file DockerFile --tag workflow-test:$(date +%s)
   build-and-test:
     runs-on: ubuntu-latest
 
@@ -60,7 +60,7 @@ jobs:
 #         context: .
 #         file: ./DockerFile
 #         push: true
-#         tags: ${{ secrets.DOCKER_USERNAME }}/flasktest-app:latest
+#         tags: ${{ secrets.DOCKER_USERNAME }}/fastapi-app:latest
 
 #     - name: Image digest
 #       run: echo ${{ steps.build-and-publish.outputs.digest }}
